--- a/views/includes/leaguelanding_sections/join.ejs
+++ b/views/includes/leaguelanding_sections/join.ejs
@@ -1,66 +1,18 @@
 <div class="container joinUsInfo">
     <h3 class="bold">How to Join?</h3>
     <hr>
-    <p class="info">
-        Leagues beginning in the Spring 2021
-        <br>
-        Please click on your state below for more information on the league near you
-    </p>
     <div class="row">
         <div class="league col s12 m4">
             <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
-            <h5 class="green-text bold">GDL MA</h5>
+            <h5 class="green-text bold">GDL</h5>
         </div>
-        <div class="towns col s12 m8">
-            <!-- <table>
-                <tr>
-                    <td class="bold">Massachusetts</td>
-                    <td class="bold">Connecticut</td>
-                </tr>
-                <tr>
-                    <td>Marlborough, Taunton, Weston, Weymouth, Woburn, Newton, Ludlow, Southborough, Bridgewater and Byfield</td>
-                    <td>Rocky Hill, Windsor, North Branford, Trumbull and Groton </td>
-                </tr>
-            </table> -->
-            <table class="townsTable">
-                <tr class="head">
-                    <td>Massachusetts</td>
-                    <td>Connecticut</td>
-                </tr>
-                <tr class="images">
-                    <td>
-                        <img src="/images/leagues/logo-draft.png" alt="">
-                    </td>
-                    <td>
-                        <img src="/images/leagues/hybrid.png" alt="">
-                    </td>
-                </tr>
-                <tr class="towns">
-                    <td>
-                        <ul>
-                            <li>Bridgewater</li>
-                            <li>Byfield</li>
-                            <li>Ludlow</li>
-                            <li>Marlborough</li>
-                            <li>Newton</li>
-                            <li>Southborough</li>
-                            <li>Taunton</li>
-                            <li>Weston</li>
-                            <li>Weymouth</li>
-                            <li>Woburn</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            <li>Groton</li>
-                            <li>North Branford</li>
-                            <li>Rocky Hill</li>
-                            <li>Trumbull</li>
-                            <li>Windsor</li> 
-                        </ul>
-                    </td>
-                </tr>
-            </table>
+        <div class="info col s12 m8">
+            <p>Programming Begins, Spring 2021!</p>
+            <p>To express a desire to participate, click on ‘Register Your Interest’ or email us directly at <a href="mailto: info@gdlsoccer.com" style="color: green; font-style: italic;">info@gdlsoccer.com</a></p>
+            <p>Site locations for GDL festivals will be determined based on the various geographic bases of participating groups, with a high priority placed on convenience!</p>
         </div>
+    </div>
+    <div class="row button">
+        <a class="btn tapinBtn" href="#contact_form">Register your Interest</a>
     </div>
 </div>
