--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -28,9 +28,7 @@
     <%- include('includes/aboutus_sections/download'); %>
 
     <!-- Form -->
-    <%- include('includes/joinus_sections/contactForm', {
-        league: 'Regular'
-    }); %>
+    <%- include('includes/joinus_sections/contactForm'); %>
 
     <!-- Contact Us -->
     <%- include('includes/general/contactUs'); %>
