--- a/views/leagues.ejs
+++ b/views/leagues.ejs
@@ -37,6 +37,12 @@
     <!-- When -->
     <%- include('includes/leaguelanding_sections/when'); %>
 
+    <!-- Join -->
+    <%- include('includes/leaguelanding_sections/join'); %>
+
+    <!-- Form -->
+    <%- include('includes/joinus_sections/contactForm'); %>
+
     <!-- Contact Us -->
     <%- include('includes/general/contactUs'); %>
 
