join us small tweaks

--- a/views/includes/joinus_sections/options.ejs
+++ b/views/includes/joinus_sections/options.ejs
@@ -11,7 +11,7 @@
                 <img src="/images/leagues/logo-draft.png">
             </td>
             <td>
-                <p>Submit an application for a GDL Program at any of our locations through MA and CT TODAY</p>
+                <p><a href="#contact_form" style="color: green; font-style: italic;">Register your interest</a> for a Spring 2021 GDL Program TODAY</p>
             </td>
         </tr>
         <tr class="grey lighten-1">
@@ -41,7 +41,7 @@
             </td>
         </tr>
         <tr class="grey lighten-3">
-            <td><p>Submit an application for a GDL Program at any of our locations through MA and CT TODAY</p></td>
+            <td><p><a href="#contact_form">Register your interest</a> for a Spring 2021 GDL Program TODAY</p></td>
         </tr>
         <tr class="grey lighten-1">
             <td>Powered by GDL</td>
