--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -19,9 +19,9 @@
 
     <!-- Info -->
     <%- include('includes/joinus_sections/included'); %>
-    <%- include('includes/joinus_sections/howToJoin'); %>
 
-    <%- include('includes/joinus_sections/leagues'); %>
+     <!-- Join -->
+     <%- include('includes/leaguelanding_sections/join'); %>
 
     <!-- <%- include('includes/joinus_sections/contactBox'); %> -->
 
