NECSL image error

--- a/views/includes/homepage_sections/partners.ejs
+++ b/views/includes/homepage_sections/partners.ejs
@@ -7,7 +7,7 @@
                 <a href="https://tapinmobilesolutions.com/" class="btn tapinBtn">Visit Tapin Site</a>
             </div>
             <div class="col s12 l4 partner-container">
-                <img class="partners-logo" src="/images/leagues/necsl.jpg">
+                <img class="partners-logo" src="/images/leagues/NECSL.jpg">
                 <a href="https://www.thenecsl.com/" class="btn tapinBtn">Visit NECSL Site</a>
             </div>
             <div class="col s12 l4 partner-container">
