--- a/views/includes/leaguelanding_sections/cost.ejs
+++ b/views/includes/leaguelanding_sections/cost.ejs
@@ -8,7 +8,7 @@
         </tr>
         <tr class="grey lighten-5">
             <td>
-                <img src="/images/leagues/necsl.jpg">
+                <img src="/images/leagues/NECSL.jpg">
             </td>
             <td>
                 <p>$240 per Team</p>
