fixed steve's name

--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="person col s12 l4">
                 <img class="leaguesLogo" src="/images/Headshots/steve.png">
-                <p class="name bold grey-text text-darken-2">Steve Schecter</p>
+                <p class="name bold grey-text text-darken-2">Steve Schechter</p>
                 <p class="title primaryGreen">Co-Founder</p>
                 <p class="subtitle grey-text">Founder of TapIn, ExchangeBlvd</p>
                 <p class="description text-darken-3">
