changed map on franchise

--- a/views/includes/franchise_sections/activeFranchises.ejs
+++ b/views/includes/franchise_sections/activeFranchises.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <h4 class="bold typicalTitle">Active Franchises</h4>
     </div>
-    <div class="mapContainer">
+    <!-- <div class="mapContainer">
         <div class="map">
             <img src="/images/MA.png" alt="" class="map">
         </div>
@@ -37,6 +37,13 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
    
+
+    <div class="mapContainer">
+        <div class="map">
+            <img src="/images/states/new_england.png" class="map">
+        </div>
+    </div>
+
 </div>
