--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -1,7 +1,7 @@
 <div class="container joinUsInfo">
     <h3 class="bold">What's Included?</h3>
     <hr>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
                 2 GDL Festivals
@@ -35,6 +35,44 @@
         <div class="col s12">
             <div class="include valign-wrapper tapinBlue">
                 Unique, personalized digital player cards displaying develpmentally appropiate coaching feedback!
+            </div>
+        </div>
+    </div> -->
+    <div class="row noMargin">
+        <div class="col s12 m4">
+            <div class="included">
+                <img src="/images/icons/festival.png" alt="">
+                <p>2 GDL Festivals</p>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="included">
+                <img src="/images/icons/diversity.png" alt="">
+                <p>4v4 Small Sided Games</p>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="included">
+                <img src="/images/icons/goal.png" alt="">
+                <p>Conditioned and Free Play</p>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="included">
+                <img src="/images/icons/field-green.png" alt="">
+                <p>Facilities</p>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="included">
+                <img src="/images/icons/referee.png" alt="">
+                <p>Referees and Staff</p>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="included">
+                <img src="/images/player_cards/girlplayercard.png" alt="">
+                <p>Unique Digital Player Card</p>
             </div>
         </div>
     </div>
