--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -2,6 +2,6 @@
 
 :root {
     --primary-green: #008738;
-    --header-font: 'Roboto', sans-serif;
+    --header-font: united;
     --darker-green: #006934;
 }
