--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,9 +61,10 @@ nav .nav-wrapper ul a.no-hover:hover {
 }
 
 .fullImage p {
-    font-style: italic;
+    /* font-style: italic; */
     font-weight: 700;
     font-size: 3rem;
+    font-family: united;
 }
 
 .fullImageAboutUs {
