--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -2,6 +2,8 @@
 
 :root {
     --primary-green: #008738;
-    --header-font: united;
+    --main-font: united;
+    --bold-font: united-bold;
+    --secondary-font: 'Roboto';
     --darker-green: #006934;
 }
