--- a/views/includes/minis/whatWeDoCard.ejs
+++ b/views/includes/minis/whatWeDoCard.ejs
@@ -3,9 +3,12 @@
         <div class="card-content">
             <img class="whatWeDo-logo" src="images/icons/<%= image %>">
             <span class="card-title white-text" style="font-weight: bold;"><%= title %></span>
-            <p class="white-text  center-align"><%= text %></p>
-            <p class="white-text  center-align"><%= text2 %></p>
-
+            <ul>
+                <li><p class="white-text  center-align"><%= text %></p>
+                    </li>
+                <li><p class="white-text  center-align"><%= text2 %></p></li>
+            </ul>
+            
         </div>
     </div>
 </div>
