--- a/views/includes/homepage_sections/news.ejs
+++ b/views/includes/homepage_sections/news.ejs
@@ -5,8 +5,8 @@
             <a href="/news#story1">
                 <div class="col s12 m6">
                     <div class="news-card hoverable">
-                        <div class="league green darken-3 white-text">
-                            GDL MA
+                        <div class="league green darken-3 white-text center-align">
+                            GDL
                         </div>
                         <p class="title white-text bold">TapIn Partnership</p>
                     </div>
@@ -15,8 +15,8 @@
             <a href="/news#story2">
                 <div class="col s12 m6">
                     <div class="news-card hoverable">
-                        <div class="league green darken-3 white-text">
-                            GDL MA
+                        <div class="league green darken-3 white-text center-align">
+                            GDL
                         </div>
                         <p class="title white-text bold">Palla Partnership</p>
                     </div>
