--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -16,7 +16,7 @@
                     <img src="/images/leagues/logo-draft.png">
                 </td>
                 <td>
-                    <p>The GDL is partnered with the very best facilities throighout New England, ensuring an elite experience for the players/teams that participate!</p>
+                    <p>The GDL is partnered with the very best facilities throughout New England, ensuring an elite experience for the players/teams that participate!</p>
                 </td>
             </tr>
             <tr class="grey lighten-1">
@@ -46,7 +46,7 @@
                 </td>
             </tr>
             <tr class="grey lighten-3">
-                <td><p>The GDL is partnered with the very best facilities throighout New England, ensuring an elite experience for the players/teams that participate!
+                <td><p>The GDL is partnered with the very best facilities throughout New England, ensuring an elite experience for the players/teams that participate!
                 </p></td>
             </tr>
             <tr class="grey lighten-1">
