--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -3,7 +3,7 @@
         <h3 class="center-align typicalTitle">What We Do</h3>
         <div class="row">
             <%- include('../minis/whatWeDoCard', {
-                title: "Technology",
+                title: "Innovation",
                 image: "technology.png",
                 text: "Unique, Personalized Digital Player Card for all Players",
                 text2: "Best in Class Technology Platform",
