whatwedo content edits

--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -5,22 +5,22 @@
             <%- include('../minis/whatWeDoCard', {
                 title: "Innovation",
                 image: "technology.png",
-                text: "Unique, Personalized Digital Player Card for all Players",
+                text: "Unique, Personalized Digital Player Card",
                 text2: "Best in Class Technology Platform",
                 num: "one"
             }); %> 
             <%- include('../minis/whatWeDoCard', {
-                title: "Development",
+                title: "Fun and Development",
                 image: "soccer.png",
-                text: "Fun, Low Pressure Introduction to Organized Competition",
-                text2: "Small Sided, Conditioned and Free Play Games",
+                text: "Festival Format, Positive and Controlled",
+                text2: "Exciting Digital Feedback Stickers!",
                 num: "two"
             }); %> 
             <%- include('../minis/whatWeDoCard', {
                 title: "Social Good",
                 image: "socialgood.png",
-                text: "Influencing Positive Social Change",
-                text2: "Impacting Young Lives Throughout the World",
+                text: "COMPLIMENTS organizations programs!",
+                text2: "Low Pressure Introduction to Structured Play",
                 num: "three"
             }); %> 
         </div>
