changed whatwedo icon

--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -17,8 +17,8 @@
                 num: "two"
             }); %> 
             <%- include('../minis/whatWeDoCard', {
-                title: "Social Good",
-                image: "socialgood.png",
+                title: "Supplemental",
+                image: "handshake.png",
                 text: "COMPLIMENTS organizations programs!",
                 text2: "Low Pressure Introduction to Structured Play",
                 num: "three"
