--- a/views/includes/news_sections/newsContainer.ejs
+++ b/views/includes/news_sections/newsContainer.ejs
@@ -18,5 +18,14 @@
             preview: '../content/stories/pallaPartnershipPreview',
             content: "../content/stories/pallaPartnership",
         }); %>
+        <%- include('../minis/newsStory', {
+            id:3,
+            league: "MA",
+            title: "Grassroots Development League Partners with the NECSL",
+            info: "Boston, MA January 20, 2020",
+            img: "/images/news/news3.JPG",
+            preview: '../content/stories/NECSLPreview',
+            content: "../content/stories/NECSL",
+        }); %>
     </div>
 </div>
