added new news story to scrollspy

--- a/views/includes/news_sections/scrollspy.ejs
+++ b/views/includes/news_sections/scrollspy.ejs
@@ -2,5 +2,6 @@
     <ul class="section table-of-contents">
       <li><a href="#story1">TapIn Partnership</a></li>
       <li><a href="#story2">Palla Partnership</a></li>
+      <li><a href="#story3">GDL Partners with NECSL</a></li>
     </ul>
 </div>
