changed header text

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,6 +4,7 @@
 
 @import "download.css";
 
+
 body {
     font-weight: 400;
     font-family: var(--main-font);
@@ -164,9 +165,25 @@ nav .nav-wrapper ul a.no-hover:hover {
 .fullImage .container a {
     /* width: 10rem; */
     font-size: 14px;
-    margin-top: 50px;
 }
 
+.container p:nth-of-type(3) {
+    font-size: 30px;
+}
+
+@media only screen and (max-width: 500px) {
+    .container p.center-align:first-of-type{
+        font-size: 28px;
+    }
+
+    .container p:nth-of-type(3) {
+        font-size: 24px;
+    }
+
+    .fullImage .container a {
+        font-size: 12px;
+    }
+}
 .whatWeDo, .ourProgram, .news {
     padding-top: 50px;
 }
