--- a/views/includes/homepage_sections/fullWidthImage.ejs
+++ b/views/includes/homepage_sections/fullWidthImage.ejs
@@ -1,5 +1,7 @@
 <div class="fullImage responsive-img">
     <div class="container">
+        <p class="center-align" style="color: white;margin: 20px 0 0 0;">Grassroots Development League</p>
+        <p style="color: white; margin: 0; font-size: 18px;" class="center-align">1st and 2nd Grade Soccer Festivals throughout New England!</p>
         <p class="center-align flow-text white-text">Soccer Starts Here!</p>
         <a href="/joinus" class="btn-large tapinBtn waves-effect waves-green">Register your Interest</a>
     </div>
