--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -600,11 +600,11 @@ ul.indicators {
     border-color:orange;
 }
 
-.testimonial-card#test3 .title {
+.testimonial-card#fellsway .title {
     color: skyblue;
 }
 
-.testimonial-card#test3 .pic {
+.testimonial-card#fellsway .pic {
     border-color:skyblue;
 }
 
