--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -13,6 +13,11 @@
                 name: "Mark Spalding",
                 title: "Head of Intermediate Academy - Rangers F.C.",
             }); %> 
+            <%- include('../minis/testimonial', {
+                img: "fellsway",
+                name: "Vinnie Musto",
+                title: "Director of Soccer - Fellsway Wanderers FC",
+            }); %> 
         </div>
 
     </div>
