--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -1,16 +1,3 @@
-<!-- <ul id="dropdown1" class="dropdown-content">
-    <li><a href="/leagues">GDL HOME</a></li>
-    <li class="divider"></li>
-    <li><a href="/leagues/MA">GDL MA</a></li>
-    <li><a href="/leagues/CT">GDL CT</a></li>
-</ul>
-<ul id="dropdown2" class="dropdown-content">
-    <li><a href="/leagues">GDL HOME</a></li>
-    <li class="divider"></li>
-    <li><a href="/leagues/MA">GDL MA</a></li>
-    <li><a href="/leagues/CT">GDL CT</a></li>
-</ul> -->
-
 <nav>
     <div class="nav-wrapper">
         <ul class="main center hide-on-small-only">
@@ -19,7 +6,7 @@
                 <li><a href="/leagues">Programs</a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
-            <a href="/" class="no-hover"><img class="logo" src="/images/leagues/MA.png"></a>
+            <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
             <div class="second">
                 <li><a href="/joinUs">Join Us</a></li>
                 <li><a href="/aboutus">About Us</a></li>
