--- a/views/includes/homepage_sections/partners.ejs
+++ b/views/includes/homepage_sections/partners.ejs
@@ -2,21 +2,28 @@
     <div class="container">
         <h3 class="center-align typicalTitle">Partners</h3>
         <div class="row">
-            <div class="col s12 l3 partner-container">
+            <div class="col s12 l4 partner-container">
                 <img class="partners-logo" src="/images/leagues/tapin.png">
                 <a href="https://tapinmobilesolutions.com/" class="btn tapinBtn">Visit Tapin Site</a>
             </div>
-            <div class="col s12 l3 partner-container">
+            <div class="col s12 l4 partner-container">
                 <img class="partners-logo" src="/images/leagues/NECSL.jpg">
                 <a href="https://www.thenecsl.com/" class="btn tapinBtn">Visit NECSL Site</a>
             </div>
-            <div class="col s12 l3 partner-container">
+            <div class="col s12 l4 partner-container">
                 <img class="partners-logo" src="/images/icons/palla.png">
                 <a href="https://www.pallasport.com/" class="btn tapinBtn">Visit Palla Site</a>
             </div>
-            <div class="col s12 l3 partner-container">
+            <div class="col s12 l4 partner-container">
                 <img class="partners-logo" src="/images/leagues/fellsway.png">
                 <a href=" https://www.fellswaywanderers.club/" class="btn tapinBtn">Visit Fellsway Site</a>
+            </div>
+            <div class="col s12 l4 partner-container">
+                <img class="partners-logo" src="/images/leagues/surf.jpg">
+                <a href="https://newenglandsurf.com/" class="btn tapinBtn">Visit NE Surf Site</a>
+            </div>
+            <div class="col s12 l4 valign-wrapper" style="height: 156px">
+                <p style="margin: auto; font-size: 24px; font-weight: 800; color: #008738;">More to Come!</p>
             </div>
         </div>
     </div>
